--- a/src/components/sections/Contactanos.css
+++ b/src/components/sections/Contactanos.css
@@ -1,17 +1,24 @@
-.contactanos h2{
-  font-size: 40px;
-  font-weight: bold;
-  margin-top: 50px;
+.contactanos h2 {
+    font-size: 40px;
+    font-weight: bold;
+    margin-top: 50px;
 }
-.contactanos{
+
+.contactanos {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.social-icons{
+
+.social-icons {
     margin: 70px;
 }
-.social-icons a{
+
+.social-icons a {
     margin-left: 25px;
     margin-right: 25px;
+}
+
+.conctainer-abaut {
+    text-align: center;
 }
