--- a/src/components/sections/HaircutSection.css
+++ b/src/components/sections/HaircutSection.css
@@ -24,6 +24,7 @@
     justify-content: center;
     gap: 40px;
     margin-bottom: 200px;
+    flex-wrap: wrap;
 }
 .image-placeholder:hover{
     scale: 1.3;
