--- a/src/components/sections/Nav.css
+++ b/src/components/sections/Nav.css
@@ -15,8 +15,10 @@
 }
 .esp-check{
     position: absolute;
-    right: 20px;
-    top: 20px;
+    right: 30px;
+    top: 30px;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 .check:checked~.encendido{
     opacity: 1;
