--- a/src/components/sections/Contactanos.css
+++ b/src/components/sections/Contactanos.css
@@ -22,3 +22,8 @@
 .conctainer-abaut {
     text-align: center;
 }
+@media (max-width:567px){
+    .social-icons a img{
+        width: 50px;
+    }
+}
