--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     font-family: "Roboto", sans-serif;
     font-weight: 100;
     font-style: normal;
+    scroll-behavior: smooth;
 }
 
 .home-content {
@@ -18,6 +19,7 @@
     gap: 100px;
     max-width: 1880px;
     margin: auto;
+    position: relative;
 }
 
 .home-content_1 {
@@ -41,7 +43,9 @@
     justify-content: center;
     text-align: center;
 }
-
+.img_main{
+    margin-top: 40px;
+}
 .text-home h1{
     font-family: "Ropa Sans", sans-serif;
     font-weight: 400;
